--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'JuliusSansOne';
+  src: url('./assets/fonts/JuliusSansOne-Regular.ttf');
+}
+body >* {
+  font-family: 'JuliusSansOne';
+}
 #root {
   max-width: 100vw;
   min-height: 100vh;
