--- a/src/common/NavBar/index.module.css
+++ b/src/common/NavBar/index.module.css
@@ -1,6 +1,19 @@
 .root{
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
   height: 50vh;
+  background-color: black;
 }
+
+.logos{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .logo{
   width: 50px;
 }
