--- a/src/Layouts/MainLayout/index.module.css
+++ b/src/Layouts/MainLayout/index.module.css
@@ -1,6 +1,19 @@
 .root{
   min-height: 100vh;
+
 }
+
+.zigzag{
+  position: absolute;
+  background-image: url('../../assets/zigzag.png');
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  z-index: 100;
+}
+
 
 /* .outletWrapper{
   min-height: 80vh;
