--- a/src/common/NavBar/index.module.css
+++ b/src/common/NavBar/index.module.css
@@ -8,12 +8,25 @@
 }
 
 .logos{
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%); */
+  /* this has to be done with absolute to smooth transition */
+  /* margin: 10px; */
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .logo{
   width: 50px;
+  
+}
+
+.title {
+  padding: 20px;
+  font-size: 35px;
 }
