--- a/src/common/Header/index.module.css
+++ b/src/common/Header/index.module.css
@@ -5,8 +5,7 @@
   padding: 0;
   margin: 0;
   width: 100%;
-  min-height: 500px;
-  max-height: 80vh;
+  height: 35vh;
   overflow: hidden;
 
 }
@@ -21,6 +20,7 @@
   display: flex;
   flex-direction: column;
   height: 40vh;
+  z-index: 50;
 }
 
 .navlinkLeft, .navlinkRight{
