--- a/src/common/Footer/index.module.css
+++ b/src/common/Footer/index.module.css
@@ -1,7 +1,7 @@
 .root{
     position: sticky;
     width: 100%;
-    bottom: 0;
+    bottom: -6vh;
     left: 0;
     background-color: black;
     transition: 1.5s all;
@@ -9,6 +9,6 @@
 
 
 .p{
-    /* padding-top: 15px; */
+    padding-top: 15px;
     font-size: 25px;
 }
