--- a/src/common/Header/index.module.css
+++ b/src/common/Header/index.module.css
@@ -29,6 +29,7 @@
   text-align: center;
   font-size: 44px;
   line-height: 60px;
+  color: #CD853F;
   background: -webkit-linear-gradient(270deg, #7C5D00 -1.67%, #C9A401 -1.67%, #BEA000 25.86%, #BFA701 49.16%, #AF9B21 68.23%, #C9A800 82.53%, #DBB701 99.99%, #BCA325 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
