--- a/src/common/Heading/index.module.css
+++ b/src/common/Heading/index.module.css
@@ -1,3 +1,19 @@
 .root{
   text-align: center;
 }
+
+.offer {
+  text-align: center;
+  font-size: 23px;
+  background: -webkit-linear-gradient(270deg, #7C5D00 -1.67%, #C9A401 -1.67%, #BEA000 25.86%, #BFA701 49.16%, #AF9B21 68.23%, #C9A800 82.53%, #DBB701 99.99%, #BCA325 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  height: 50px;
+}
+
+@media (min-width: 500px){
+  .offer{
+    font-size: 30px;
+    height: 80px;
+  }
+}
