--- a/src/common/Input/index.module.css
+++ b/src/common/Input/index.module.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: 'JuliusSansOne';
+  src: url('./assets/fonts/JuliusSansOne-Regular.ttf');
+  background-color: rgb(36,36,36);
+}
+
+.textarea, .input {
+  font-family: 'JuliusSansOne';
+  border: 1px solid rgb(131, 111, 1);
+  background-color: #444444;
+}
+
 .textarea{
   resize: none;
+  height: 100px;
 }
