--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
-@font-face {
-  font-family: 'JuliusSansOne';
-  src: url('./assets/fonts/JuliusSansOne-Regular.ttf');
-  background-color: rgb(36,36,36);
-}
 body >* {
-  font-family: 'JuliusSansOne';
+  font-family: 'Julius Sans One', sans-serif;
   color: white;
 }
 
