--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,17 @@ body >* {
   box-sizing: border-box;
   text-align: center;
 }
+
+.app{
+  position: relative;
+}
+
+.app::after{
+  content: 'Im here';
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-image: url('./assets/zigzag.png');
+}
