--- a/src/common/Header/index.module.css
+++ b/src/common/Header/index.module.css
@@ -20,10 +20,11 @@
   display: flex;
   flex-direction: column;
   height: 40vh;
-  z-index: 50;
+  position: relative;
 }
 
 .navlinkLeft, .navlinkRight{
+  z-index: 2;
   display: flex;
   align-items: center;
   text-align: center;
