--- a/src/common/Card/index.module.css
+++ b/src/common/Card/index.module.css
@@ -4,6 +4,7 @@
   margin: 20px 0;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.187);
+  color: white;
   border: 1px solid gold;
   padding: 10px;
   overflow: hidden;
