--- a/src/common/Input/index.module.css
+++ b/src/common/Input/index.module.css
@@ -1,10 +1,21 @@
+.root{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .textarea, .input {
   font-family: 'Julius Sans One', sans-serif;
   border: 1px solid rgb(131, 111, 1);
   background-color: #444444;
+  height: 20px;
+  border-radius: 10px;
 }
 
 .textarea{
+  /* outline: 1px solid black; */
   resize: none;
-  height: 100px;
+  min-height: 100px;
+  width: 100%;
 }
