--- a/src/common/Card/index.module.css
+++ b/src/common/Card/index.module.css
@@ -1,6 +1,6 @@
 .root{
   flex-basis: 100%;
-  height: 350px;
+  min-height: 350px;
   margin: 20px 0;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.187);
