--- a/src/common/ContactForm/index.module.css
+++ b/src/common/ContactForm/index.module.css
@@ -4,6 +4,15 @@
   align-items: center;
   justify-content: center;
 }
+
+.sent{
+  background-color: rgb(133, 245, 125);
+  margin-top: 20px;
+  padding: 5px 15px;
+  color: rgb(6, 6, 6);
+  border-radius: 5px;
+  
+}
 .left, .right{
   /* outline: 1px solid yellow; */
   flex-basis: 100%;
