--- a/src/common/NavBar/index.module.css
+++ b/src/common/NavBar/index.module.css
@@ -7,17 +7,41 @@
   background-color: black;
 }
 
-.logos{
+.logos, .logoLeft{
   height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: flex-end;
 }
 
-.logo{
+.logos{
+  flex-direction: column;
+}
+
+.logosLeft{
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.logo, .logoLeft{
   width: 50px;
   
+}
+
+.logoLeft{
+  margin-right: 20px;
+}
+
+.titleLeft{
+  font-size: 40px;
+}
+
+.logosLeft{
+  flex-direction: row;
 }
 
 .title {
