--- a/src/Pages/Home/index.module.css
+++ b/src/Pages/Home/index.module.css
@@ -1,12 +1,16 @@
 .tiles {
   display: flex;
   flex-direction: column;
+  background-image: url('../../assets/zigzag.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 150px;
 }
 
 .cardLeft, .cardRight{
   padding: 10px;
   border-radius: 30px;
-  background-color: rgba(245, 245, 220, 0.027);
+  background-color: rgba(39, 39, 38, 0.84);
   position: relative;
   width: 50%
 }
