--- a/src/common/Footer/index.module.css
+++ b/src/common/Footer/index.module.css
@@ -1,13 +1,30 @@
 .root{
     position: sticky;
     width: 100%;
-    bottom: -6vh;
+    bottom: 0vh;
     left: 0;
     background-color: black;
 }
 
+.data{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 40px;
+    opacity: 0;
+}
 
+.data p{
+    margin: 0;
+    padding: 0;
+}
 .p{
     padding-top: 15px;
     font-size: 25px;
+}
+
+@media (min-width: 800px){
+    .data{
+        flex-direction: row;
+    }
 }
