--- a/src/Pages/Home/index.module.css
+++ b/src/Pages/Home/index.module.css
@@ -12,14 +12,13 @@
   position: relative;
 
 }
-/* 
-.borderLeft{
-  position: absolute;
-  width: 400px;
-  height: 400px;
-  border-radius: 100%;
-  border-right: 5px solid gold;
-} */
+
+.testimonials{
+  width: 100%;
+  min-height: 300px;
+  background-color: #d0c38a;
+  padding-top: 15px;
+}
 
 @media (min-width: 800px){
   .tiles{
