--- a/src/common/Button/index.module.css
+++ b/src/common/Button/index.module.css
@@ -7,6 +7,7 @@
     font-size: 25px;
     max-width: fit-content;
     z-index: 5;
+    font-family: 'Julius Sans One', sans-serif;
 }
 
 .dark {
@@ -19,7 +20,7 @@
     padding: 10px 30px;
     background-color: transparent;
     border: 1px solid rgb(244, 243, 243);
-    color: rgb(243, 243, 243);
+    color: rgb(232, 226, 63);
     border: 2px solid white;
 }
 
