--- a/src/common/Header/index.module.css
+++ b/src/common/Header/index.module.css
@@ -5,7 +5,7 @@
   padding: 0;
   margin: 0;
   width: 100%;
-  height: 35vh;
+  height: 30vh;
   overflow: hidden;
 
 }
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   height: 40vh;
-  min-height: 250px;
+  min-height: 200px;
   position: relative;
 }
 
@@ -29,8 +29,8 @@
   display: flex;
   align-items: center;
   text-align: center;
-  font-size: 44px;
-  line-height: 60px;
+  font-size: 35px;
+  line-height: 50px;
   color: #CD853F;
   background: -webkit-linear-gradient(270deg, #7C5D00 -1.67%, #C9A401 -1.67%, #BEA000 25.86%, #BFA701 49.16%, #AF9B21 68.23%, #C9A800 82.53%, #DBB701 99.99%, #BCA325 100%);
   -webkit-background-clip: text;
@@ -42,6 +42,17 @@
 }
 .heroImg {
   width: 100%;
+}
+
+@media (min-width: 500px) {
+  .nav{
+    min-height: 250px;
+
+  }
+  .navlinkLeft, .navlinkRight{
+    font-size: 44px;
+    line-height: 60px;
+  }
 }
 
 @media (min-width: 1000px) {
