--- a/src/common/Footer/index.module.css
+++ b/src/common/Footer/index.module.css
@@ -4,6 +4,7 @@
     bottom: 0vh;
     left: 0;
     background-color: black;
+    overflow: hidden;
 }
 
 .data{
@@ -19,8 +20,18 @@
     padding: 0;
 }
 .p{
-    padding-top: 15px;
-    font-size: 25px;
+    padding-top: 5px;
+    font-size: 18px;
+}
+
+@media (min-width: 500px){
+    /* .root{
+        min-height: fit-content;
+    } */
+    .p{
+        padding-top: 5px;
+        font-size: 20px;
+    }
 }
 
 @media (min-width: 800px){
