--- a/src/common/Heading/index.module.css
+++ b/src/common/Heading/index.module.css
@@ -4,7 +4,7 @@
 
 .offer {
   text-align: center;
-  font-size: 23px;
+  font-size: 17px;
   background: -webkit-linear-gradient(270deg, #7C5D00 -1.67%, #C9A401 -1.67%, #BEA000 25.86%, #BFA701 49.16%, #AF9B21 68.23%, #C9A800 82.53%, #DBB701 99.99%, #BCA325 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -12,6 +12,7 @@
 }
 
 .gold{
+  font-size: 30px;
   width: fit-content;
   margin: auto;
   color: #C9A401;
@@ -22,5 +23,9 @@
   .offer{
     font-size: 30px;
     height: 80px;
+  }
+
+  .gold{
+    font-size: 40px;
   }
 }
