--- a/src/common/Heading/index.module.css
+++ b/src/common/Heading/index.module.css
@@ -1,5 +1,6 @@
 .root{
   text-align: center;
+  font-size: 40px;
 }
 
 .offer {
@@ -20,6 +21,7 @@
 }
 
 @media (min-width: 500px){
+
   .offer{
     font-size: 30px;
     height: 80px;
@@ -27,5 +29,11 @@
 
   .gold{
     font-size: 40px;
+  }
+}
+
+@media (min-width: 800px){
+  .root{
+    font-size: 50px;
   }
 }
