--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body >* {
-  font-family: 'Julius Sans One', sans-serif;
+  font-family: 'Kumbh Sans', sans-serif;
   color: white;
   background-color: rgb(31, 31, 31);
 }
