--- a/src/common/Heading/index.module.css
+++ b/src/common/Heading/index.module.css
@@ -1,6 +1,7 @@
 .root{
   text-align: center;
   font-size: 40px;
+  font-family: 'Julius Sans One', sans-serif;
 }
 
 .offer {
@@ -10,6 +11,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   height: 50px;
+  font-family: 'Julius Sans One', sans-serif; 
 }
 
 .gold{
@@ -18,6 +20,7 @@
   margin: auto;
   color: #C9A401;
   box-shadow: 10px #7C5D00;
+  font-family: 'Julius Sans One', sans-serif;
 }
 
 @media (min-width: 500px){
