Small image add to cards

--- a/src/Pages/Home/index.module.css
+++ b/src/Pages/Home/index.module.css
@@ -13,6 +13,16 @@
 
 }
 
+
+.smallImg{
+  /* position: absolute; */
+  width: 90%;
+  
+  margin: auto;
+  height: 50px;
+  background-image: url('../../assets/smallImg.png');
+}
+
 .testimonials{
   width: 100%;
   height: 500px;
