--- a/src/common/Card/index.module.css
+++ b/src/common/Card/index.module.css
@@ -1,4 +1,5 @@
 .root{
+  position: relative;
   flex-basis: 100%;
   min-height: 350px;
   margin: 20px 0;
@@ -10,6 +11,7 @@
   overflow: hidden;
   text-align: justify;
 }
+
 
 @media (min-width: 500px) {
   .root{
